--- a/dependencies/gui/kat.kv
+++ b/dependencies/gui/kat.kv
@@ -35,27 +35,6 @@
                 text: 'No'
                 on_release: root.dismiss()
 
-<MainW, Chat>:
-    canvas:
-        Rectangle:
-            pos: self.x, 0
-            size: self.width, self.height
-    
-    Button:
-        id: stgs
-        background_down: './icons/settings-press.png'
-        background_normal: './icons/settings.png'
-        border: 0, 0, 0, 0
-        always_release: True
-        right: root.right - 20
-        top: root.top - 10
-        size: 40, 40
-        size_hint: None, None
-        on_release:
-            root.manager.transition.direction = 'down'
-            root.manager.current = 'settings'
-        
-
 <MainW>:
     Button:
         id: bck
@@ -67,6 +46,20 @@
         size: 40, 40
         size_hint: None, None
         on_release: Factory.MyPopup().open()
+    
+    Button:
+        id: stgs
+        background_down: './icons/settings-press.png'
+        background_normal: './icons/settings.png'
+        border: 0, 0, 0, 0
+        right: root.right - 20
+        top: root.top - 10
+        size: 40, 40
+        size_hint: None, None
+        on_release:
+            app.lastscreen = root.manager.current
+            root.manager.transition.direction = 'down'
+            root.manager.current = 'settings'
 
     Button:
         id: mcphne
@@ -77,12 +70,21 @@
         y: root.y + 40
         size: 50, 50
         size_hint: None, None
+
+    Button:
+        id: msg
+        background_down: './icons/msg-press.png'
+        background_normal: './icons/msg.png'
+        border: 0, 0, 0, 0
+        center_x: root.right - 50
+        y: root. y + 45
+        size: 30, 30
+        size_hint: None, None
         on_release:
-            root.manager.transition.direction = 'left'
+            root.manager.transition.direction = 'up'
             root.manager.current = 'chat'
 
 <Chat>:
-
     Button:
         id: bck
         background_down: './icons/back-press.png'
@@ -93,8 +95,22 @@
         size: 40, 40
         size_hint: None, None
         on_release:
-            root.manager.transition.direction = 'right'
+            root.manager.transition.direction = 'down'
             root.manager.current = 'main'
+
+    Button:
+        id: stgs
+        background_down: './icons/settings-press.png'
+        background_normal: './icons/settings.png'
+        border: 0, 0, 0, 0
+        right: root.right - 20
+        top: root.top - 10
+        size: 40, 40
+        size_hint: None, None
+        on_release:
+            app.lastscreen = root.manager.current
+            root.manager.transition.direction = 'down'
+            root.manager.current = 'settings'
 
     BoxLayout:
         orientation: 'horizontal'
@@ -102,23 +118,29 @@
         cols: 2
         Image:
             id: inpimg
-            source: './icons/user_inp.png'
+            source: './icons/user_inp1.png'
             x: root.x + 10
             y: root.y + 10
-            size: root.width - 40, 40
+            width: root.width - 40
+            height: max(40, scrlv.height)
             size_hint: 0.9, None
             allow_stretch: True
             keep_ratio: False
-            TextInput:
-                id: usrinp
-                valign: 'middle'
-                halign: 'left'
-                font_size: 16
-                multiline: True
+            ScrollView:
+                id: scrlv
                 x: root.ids['inpimg'].x + 10
-                y: root.ids['inpimg'].y + 5
-                background_color: 0, 0, 0, 0
-                size: root.width - 80, 33
+                y: root.ids['inpimg'].y
+                width: inpimg.width - 15
+                height: (len(usrinp._lines)+1) * usrinp.line_height if (len(usrinp._lines)+1 <= 5) else 5 * usrinp.line_height
+                TextInput:
+                    id: usrinp
+                    valign: 'middle'
+                    halign: 'left'
+                    font_size: 16
+                    multiline: True
+                    size_hint: scrlv.size_hint_x, None
+                    height: scrlv.height
+                    background_color: 0, 0, 0, 0
     
         Button:
             id: post
@@ -126,11 +148,12 @@
             background_down: './icons/type1-press.png'
             background_normal: './icons/type1.png'
             border: 0, 0, 0, 0
-            size: 40, 40
-            x: root.width * 14/17 + 5
+            size: 35, 35
+            x: inpimg.x + 10
             y: root.y + 20
             size_hint: None, None
-
+            on_release:
+                usrinp.text = ''
 <Stgs>:
     canvas:
         Rectangle:
@@ -147,7 +170,7 @@
         size_hint: None, None
         on_release:
             root.manager.transition.direction = 'up'
-            root.manager.current = 'main'
+            root.manager.current = app.lastscreen
 
     Label:
         center_x: self.center_x
